sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

10-10-2015 10:32:
L:\xampp\htdocs\repos\libraries\static-site-template\.sublime-gulp-tmp.js:56
                scripts.push(files[i].slice(0, -3);
                                                  ^
SyntaxError: Unexpected token ;
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (L:\portables\Sublime Text 3\Data\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (L:\portables\Sublime Text 3\Data\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:460:26)


10-11-2015 17:36:
L:\xampp\htdocs\repos\libraries\static-site-template\.sublime-gulp-tmp.js:30
import * as scripts from './gulpfile/_scripts';
^^^^^^
SyntaxError: Unexpected reserved word
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (L:\portables\Sublime Text 3\Data\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (L:\portables\Sublime Text 3\Data\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:460:26)
